# llm-proxy-app

./: .gitignore  README.md  package-lock.json  package.json
scripts/: build-proxy.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
